--- a/paper/sample.bib
+++ b/paper/sample.bib
@@ -22,6 +22,12 @@
   DOI       = {10.2307/1402659},
   url       = {http://www.jstor.org/stable/1402659}
 }
+@article{stackoverflow_paper,
+  author    = {L. Mamykina, B. Namoim et al},
+  title     = {Design lessons from the fastest q\&a site in the west},
+  journal   = {Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
+  pages     = {2857-2866}
+}
 
 @book{big_data_analytics_spark,
   author    = {Mohammed Guller},
