Benchmark analysis notebooks and sml example

--- a/notebooks/Cox_analysis.ipynb
+++ b/notebooks/Cox_analysis.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<pyspark.context.SparkContext object at 0x10dc4ae10>\n",
-      "<pyspark.sql.context.SQLContext object at 0x10dcd6978>\n"
+      "<pyspark.context.SparkContext object at 0x1084c5f98>\n",
+      "<pyspark.sql.context.SQLContext object at 0x1084c5e10>\n"
      ]
     }
    ],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
        "''"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,73 +62,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['1 1 0.022689079727835924',\n",
-       " '1 2 1.022948434691432',\n",
-       " '1 3 0.008840947583818171',\n",
-       " '1 4 2.566362882793737',\n",
-       " '1 5 0.010277124868839582',\n",
-       " '1 6 0.005361140874345898',\n",
-       " '1 7 1.9738121166840719',\n",
-       " '2 1 -0.004947412128148468',\n",
-       " '2 2 0.9950648061572985',\n",
-       " '2 3 3.9898425770444336E-4',\n",
-       " '2 4 -12.40001837820222',\n",
-       " '2 6 -0.005729406903647625',\n",
-       " '2 7 1.9546175881542012',\n",
-       " '3 1 2.913130307898166E-6',\n",
-       " '3 2 1.0000029131345511',\n",
-       " '3 3 2.1537592841708107E-7',\n",
-       " '3 4 13.525793385121542',\n",
-       " '3 6 2.49100124506381E-6',\n",
-       " '3 7 1.9599666822944335',\n",
-       " '4 1 0.001178451455254229',\n",
-       " '4 2 1.0011791461020128',\n",
-       " '4 3 9.22013307433513E-4',\n",
-       " '4 4 1.2781284670766078',\n",
-       " '4 5 0.20120413305415874',\n",
-       " '4 6 -6.28661420582113E-4',\n",
-       " '4 7 1.9602204226878748']"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "input_data"
+    "#input_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "26"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(input_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "input_arrays = []\n",
@@ -142,53 +88,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['0.022689079727835924',\n",
-       "  '1.022948434691432',\n",
-       "  '0.008840947583818171',\n",
-       "  '2.566362882793737',\n",
-       "  '0.010277124868839582',\n",
-       "  '0.005361140874345898',\n",
-       "  '1.9738121166840719'],\n",
-       " ['-0.004947412128148468',\n",
-       "  '0.9950648061572985',\n",
-       "  '3.9898425770444336E-4',\n",
-       "  '-12.40001837820222',\n",
-       "  '-0.005729406903647625',\n",
-       "  '1.9546175881542012',\n",
-       "  '2.913130307898166E-6'],\n",
-       " ['1.0000029131345511',\n",
-       "  '2.1537592841708107E-7',\n",
-       "  '13.525793385121542',\n",
-       "  '2.49100124506381E-6',\n",
-       "  '1.9599666822944335',\n",
-       "  '0.001178451455254229',\n",
-       "  '1.0011791461020128'],\n",
-       " ['9.22013307433513E-4',\n",
-       "  '1.2781284670766078',\n",
-       "  '0.20120413305415874',\n",
-       "  '-6.28661420582113E-4',\n",
-       "  '1.9602204226878748']]"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mas"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -227,226 +130,6 @@
    },
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "input_df = pd.read_csv(\"/Users/Mat/Downloads/final_df_fill/output_cox/fileM.csv\",sep=\" \", )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>1</th>\n",
-       "      <th>1.1</th>\n",
-       "      <th>0.022689079727835924</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1.022948e+00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>8.840948e-03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2.566363e+00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1.027712e-02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>6</td>\n",
-       "      <td>5.361141e-03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>1</td>\n",
-       "      <td>7</td>\n",
-       "      <td>1.973812e+00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-4.947412e-03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>9.950648e-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3.989843e-04</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>-1.240002e+01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>2</td>\n",
-       "      <td>6</td>\n",
-       "      <td>-5.729407e-03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>2</td>\n",
-       "      <td>7</td>\n",
-       "      <td>1.954618e+00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2.913130e-06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1.000003e+00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2.153759e-07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1.352579e+01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>3</td>\n",
-       "      <td>6</td>\n",
-       "      <td>2.491001e-06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>3</td>\n",
-       "      <td>7</td>\n",
-       "      <td>1.959967e+00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.178451e-03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1.001179e+00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>9.220133e-04</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1.278128e+00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>4</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2.012041e-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>4</td>\n",
-       "      <td>6</td>\n",
-       "      <td>-6.286614e-04</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>4</td>\n",
-       "      <td>7</td>\n",
-       "      <td>1.960220e+00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    1  1.1  0.022689079727835924\n",
-       "0   1    2          1.022948e+00\n",
-       "1   1    3          8.840948e-03\n",
-       "2   1    4          2.566363e+00\n",
-       "3   1    5          1.027712e-02\n",
-       "4   1    6          5.361141e-03\n",
-       "5   1    7          1.973812e+00\n",
-       "6   2    1         -4.947412e-03\n",
-       "7   2    2          9.950648e-01\n",
-       "8   2    3          3.989843e-04\n",
-       "9   2    4         -1.240002e+01\n",
-       "10  2    6         -5.729407e-03\n",
-       "11  2    7          1.954618e+00\n",
-       "12  3    1          2.913130e-06\n",
-       "13  3    2          1.000003e+00\n",
-       "14  3    3          2.153759e-07\n",
-       "15  3    4          1.352579e+01\n",
-       "16  3    6          2.491001e-06\n",
-       "17  3    7          1.959967e+00\n",
-       "18  4    1          1.178451e-03\n",
-       "19  4    2          1.001179e+00\n",
-       "20  4    3          9.220133e-04\n",
-       "21  4    4          1.278128e+00\n",
-       "22  4    5          2.012041e-01\n",
-       "23  4    6         -6.286614e-04\n",
-       "24  4    7          1.960220e+00"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "input_df"
-   ]
   },
   {
    "cell_type": "code",
